[AUD-112] Fix scrollable modals on iOS (#33)

--- a/packages/stems/src/Modal/Modal.module.css
+++ b/packages/stems/src/Modal/Modal.module.css
@@ -39,18 +39,6 @@
   top: 0;
 }
 
-/* Target iOS Safari */
-@supports (-webkit-overflow-scrolling: touch) {
-  /* This needs to position `absolute` instead of `fixed` (which is what it should be)
-   * due to this utterly absurd webkit iOS bug:
-   * https://gist.github.com/avesus/957889b4941239490c6c441adbe32398
-   */
-   :global(.modalRootContainer) {
-     position: absolute;
-   }
-}
-
-
 :global(#modalRoot) {
   /* This needs to position `relative` so that multiple modals can overlay each other */
   position: relative;
